ordeno mascotas en adop por mas recientes

--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -53,7 +53,7 @@
 
 				<!--Lista de Mascotas por Adoptar-->
 				<div class="col-sm-5">
-					<h2 class="titulo" >Mascotas En Adopcion</h2>
+					<h2 class="titulo" >Mascotas En Adopción</h2>
 					
 					<div class="card" id="mascotaDiv">
 
